--- a/to_do_project/todos/templates/todos/edit_page.html
+++ b/to_do_project/todos/templates/todos/edit_page.html
@@ -1,13 +1,13 @@
-{% extends 'to_do_list/wrapper.html' %}
+{% extends 'todos/wrapper.html' %}
 
 {% block title %}Main page{% endblock %}
 {% block styles %}
     {% load static %}
-    <link rel="stylesheet" href="{% static "styles/main/main-page.css" %}">
+    <link rel="stylesheet" href="{% static "styles/todos/main-page.css" %}">
 {% endblock %}
 
 {% block content %}
     <section class="todo">
-        {% include "to_do_list/includes/todo-edit.html" %}
+        {% include "todos/includes/todo-edit.html" %}
     </section>
 {% endblock %}
