--- a/to_do_project/todos/templates/todos/wrapper.html
+++ b/to_do_project/todos/templates/todos/wrapper.html
@@ -5,7 +5,7 @@
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static "styles/main/main.css" %}">
+    <link rel="stylesheet" href="{% static "styles/todos/main.css" %}">
     {% block styles %}{% endblock %}
 </head>
 <body>
